--- a/style.css
+++ b/style.css
@@ -1,50 +1,8 @@
-/* header {
-    box-sizing: border-box;
-  }
-  
- 
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-  }
 
-  ul li {
-    border: 1px solid #ddd;
-    margin-top: -1px; 
-    background-color: #f6f6f6;
-    padding: 12px;
-    width:20px;
-    text-decoration: none;
-    font-size: 18px;
-    color: black;
-    display: block;
-    position: relative;
-  }
-  
-  
-  ul li:hover {
-    background-color: #eee;
-  }
-  
-
-  .close {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    right: 0%;
-    padding: 12px 16px;
-    transform: translate(0%, -50%);
-  } */
-
-  /* *{
-    margin:0;
-    padding:0; 
-    box-sizing:border-box
-}  */
 .box{
     max-width: 2000px;
     margin: auto;
+    overflow: hidden;
 }
 
 
@@ -58,7 +16,7 @@
     display: flex;
     justify-content:space-around;
     align-items: center;
-    margin: 20px 0;
+    margin: 0 0;
     background-color:#fafafc;
   } 
   .header-ul{
@@ -119,18 +77,235 @@
 .Support{
     text-decoration: none;
 }
+.products{
+  display: flex;
+  align-items: center;
+  margin: 0 0;
+  margin-top: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+.product{
+margin: 0 auto 7px;
 
-@media  (max-width: 800px) {
-  .header-ul {
-    display: none;
+
+}
+
+.iphone_icon{
+ margin-left: 20px;
+}
+
+.iphone-h4-15{
+  margin-right: 20px;
+  font-size: 12px;
+  margin-left: 6px;
+  text-decoration: none;
+
+  /* font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif; */
+}
+.iphone-h4{
+  font-size: 12px;
+  margin-left: 10px;
+  /* font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif; */
+}
+.iphone-h5{
+  margin-left: 20px;
+  color:#bf4800;
+   font-size: 10px;
+  /* font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;; */
+} 
+
+
+.iphone_iconSE{
+  width: 22px;
+  height: 54px;
+  margin-left: 20px;
+
+}
+.iphone_icon-AirTag{
+  width: 30px;
+  height: 54px;
+  margin-left: 10px;
+}
+
+.iphone_icon-card{
+  width: 40px;
+  height: 54px;
+  margin-left: 20px;
+}
+.iphone_icon-iOS{
+  width: 30px;
+  height: 54px;
+  margin-left: 10px;
+}
+
+.product-different{
+
+  margin: 0 auto ;
+  margin-top: 22px;
+}
+
+.offer{
+  /* height: 109px; */
+  background-color:#fafafc;
+  margin: 0 0 ;
+}
+
+
+ p{
+    text-align: center;   
+  font-size: 21px;
+  padding-top: 1.41176em;
+  padding-bottom: 1.41176em; 
+   
+  
+  
+} 
+
+span {
+  display: flex;
+  align-items: center;
+
+  /* p {
+    margin: 0;
+  } */
+
+  a {
+    text-decoration: none;
+    color: blue;
+    margin: 0 0.3rem;
   }
 }
 
-@media  (max-width: 800px) {
+.section-content{
+
+  overflow: hidden;
+  margin-left: auto;
+    margin-right: auto;
+    width: 692px;
+    align-items: center;
+    width: 2240px;
+    height: 809px;
+    background-color: black;
+    position: absolute;
+}
+
+.section-image{
+  text-align: center;
+  padding-top:400px;
+ position: absolute;
+  
+}
+
+.section-h2{
+  color: #bf4800;
+  
+  text-align: center;
+  position: relative;
+}
+.section-h1{
+  position:relative;
+  color: #f5f5f7;
+   margin-top: 8px;
+    font-weight: 600;
+   text-align: center; 
+    font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+  
+}
+.section-Titanium{
+position: relative;
+text-align: center;
+
+margin-left: 990px;
+width: 260px;
+height: 49px;
+margin-bottom: 25px;
+font-size: 44px;
+    line-height: 1.0909090909;
+    font-weight: 600;
+    letter-spacing: -0.002em;
+    font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+
+}
+.section-p{
+  font-size: 21px;
+    line-height: 1.381002381;
+    font-weight: 400;
+    letter-spacing: .011em;
+    font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+    text-align: center;
+    margin-left: 90px;
+    margin-top: 26px;
+    color: #f5f5f7;
+    position: relative;
+}
+.button{
+  cursor: pointer;
+    text-align: center;
+    white-space: nowrap;
+    font-size: 17px;
+    line-height: 1.1764805882;
+    font-weight: 400;
+    letter-spacing: -0.022em;
+    font-family: SF Pro Text,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+    min-width: 30px;
+    padding: 7px 15px;
+    border-radius: 980px;
+    text-decoration: none;
+    background-color: #0071e3;
+    color:#fff;
+    border: 1px solid transparent;
+     margin-left: 1100px; 
+    position: relative;
+}
+.learnmore{
+  font-size: 19px;
+    line-height: 1.2105263158;
+    font-weight: 400;
+    letter-spacing: .012em;
+    font-family: SF Pro Display,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;
+    color: blue;
+    position: relative;
+    margin-left: 30px;
+}
+
+
+@media  (max-width: 1124px) {
+  .header-ul {
+    display: none;
+  }
+
+
+  .header-nav {
+    
+    display: flex;
+    justify-content: space-between;
+  }
+
   .shopping-bag{
-    margin-right: 50px;  
+    margin-right: 500px;  
   }
          
-   }
+}
+@media  (max-width:780){
+  p{
+    position: relative;
+    display: block;
+  }
+}
+ 
+@media  (max-width: 1124px) {
+  .offer {
+    background-color: #0071e3;
+    position: absolute;
+    z-index: 3;
+    width: 100%;
+  }
+
+}
+
+
+
+
 
    
